:ok_hand: feat: adiciona métodos para obter períodos de cursos, disciplinas por período e notificações.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "fpdf2 (>=2.8.2,<3.0.0)",
     "toml (>=0.10.2,<0.11.0)",
     "google-genai (>=1.10.0,<2.0.0)",
+    "schedule (>=1.2.2,<2.0.0)",
+    "telethon (>=1.40.0,<2.0.0)",
 ]
 
 
